--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1)
 
 project(RAPID-AF)
 
+set(CMAKE_CXX_STANDARD 11)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+
 find_package(OpenCV REQUIRED)
+find_package(Threads REQUIRED)
 
 set(OTHER_FILES
     .gitignore
@@ -19,4 +23,5 @@ add_custom_target(project-related-files SOURCES ${OTHER_FILES})
 add_executable(rapid-af ${SOURCES})
 target_link_libraries(rapid-af
     ${OpenCV_LIBS}
+    Threads::Threads
 )
